# bevy_2d_custom_material

./: Cargo.toml  README.md
examples/: color_material.rs  custom_material.rs
src/: lib.rs  main.rs  shader.wgsl
src/color_material_test/: mod.rs
src/custom_pipeline_material/: mod.rs  shader.wgsl
